[gd_scene load_steps=5 format=2]

[ext_resource path="res://Settings/Panel.gd" type="Script" id=1]
[ext_resource path="res://Settings/UIResolutionSelector.tscn" type="PackedScene" id=2]
[ext_resource path="res://Settings/UISettingsCheckbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=4]

[node name="UIVideoSettings" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 378.0
margin_top = 32.0
margin_right = -319.0
margin_bottom = -166.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 29.0
margin_top = 95.0
margin_right = 573.0
margin_bottom = 457.0
custom_constants/separation = 9
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 544.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 4 )
text = "Settings"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 85.0
margin_right = 544.0
margin_bottom = 89.0

[node name="UIResolutionSelector" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 98.0
margin_right = 544.0
margin_bottom = 145.0
alignment = 1

[node name="Label" parent="VBoxContainer/UIResolutionSelector" index="0"]
margin_left = 99.0
margin_top = 3.0
margin_right = 274.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 4 )

[node name="OptionButton" parent="VBoxContainer/UIResolutionSelector" index="1"]
margin_left = 278.0
margin_right = 445.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 4 )

[node name="UIFullScreenCheckbox" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 154.0
margin_right = 544.0
margin_bottom = 203.0
alignment = 1

[node name="Label" parent="VBoxContainer/UIFullScreenCheckbox" index="0"]
margin_left = 145.0
margin_top = 4.0
margin_right = 318.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 4 )
text = "Fullscreen"

[node name="CheckBox" parent="VBoxContainer/UIFullScreenCheckbox" index="1"]
margin_left = 322.0
margin_right = 398.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 4 )
text = "On"

[node name="UIVsyncCheckbox" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 212.0
margin_right = 544.0
margin_bottom = 261.0
alignment = 1

[node name="Label" parent="VBoxContainer/UIVsyncCheckbox" index="0"]
margin_left = 182.0
margin_top = 4.0
margin_right = 282.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 4 )

[node name="CheckBox" parent="VBoxContainer/UIVsyncCheckbox" index="1"]
margin_left = 286.0
margin_right = 362.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 4 )
text = "On"

[node name="Spacer" type="Control" parent="VBoxContainer"]
margin_top = 270.0
margin_right = 544.0
margin_bottom = 270.0

[node name="ApplyButton" type="Button" parent="VBoxContainer"]
margin_top = 279.0
margin_right = 544.0
margin_bottom = 326.0
custom_fonts/font = ExtResource( 4 )
text = "Apply"

[connection signal="resolution_changed" from="VBoxContainer/UIResolutionSelector" to="." method="_on_UIResolutionSelector_resolution_changed"]
[connection signal="toggled" from="VBoxContainer/UIFullScreenCheckbox" to="." method="_on_UIFullScreenCheckbox_toggled"]
[connection signal="toggled" from="VBoxContainer/UIVsyncCheckbox" to="." method="_on_UIVsyncCheckbox_toggled"]
[connection signal="pressed" from="VBoxContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]

[editable path="VBoxContainer/UIResolutionSelector"]
[editable path="VBoxContainer/UIFullScreenCheckbox"]
[editable path="VBoxContainer/UIVsyncCheckbox"]
